--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#week2">Week 2</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week3">Week 3</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -375,6 +378,7 @@
               <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">FunBoxRookie</a> : Offensive Security Proving Grounds (Play) <br><br>
               <a href="https://tryhackme.com/path-action/pentestplus/join" target="_blank">CompTIA Pentest+ Path</a> : TryHackMe <br><br>
               <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+              <a href="https://tryhackme.com/room/lookingglass" target="_blank">Looking Glass</a> : TryHackMe <br><br>
             </p>
           <br><br> 
           <h5>Blogs Reads</h5>
@@ -401,6 +405,7 @@
               <a href="https://tryhackme.com/path-action/pentestplus/join" target="_blank">CompTIA Pentest+ Path</a> : TryHackMe <br><br>
               <a href="https://metactf.com/login" target="_blank">MetaCTF</a>
               <a href="https://tryhackme.com/room/pythonforcybersecurity" target="_blank">Python for Pentesters</a> : TryHackMe <br></br>
+              <a href="https://tryhackme.com/room/inferno" target="_blank">Inferno</a> : TryHackMe <br><br>
             </p>
           <br><br> 
           <h5>Blogs Reads</h5>
@@ -410,6 +415,31 @@
               <a href="https://medium.com/@mridulkakkar151/hunting-for-bugs-b5c9db6871fa" target="_blank">Hunting for Bugs</a> : Mridulkakkar <br><br>
               <a href="https://infosecwriteups.com/bypassed-and-uploaded-a-sweet-reverse-shell-d15e1bbf5836" target="_blank">Bypassed! and uploaded a sweet reverse shell</a> : Ajay Sharma <br><br>
               <a href="https://shahjerry33.medium.com/xss-via-exif-data-the-p2-elevator-d09e7b7fe9b9" target="_blank">XSS via Exif Data - The P2 Elevator</a> : Jerry Shah (Jerry) <br><br>
+            </p>
+          <br><br>
+        </p>
+        <h2 id="week3">Week 3</h2> <br><br><br>
+        <br><br>
+        <h3>Day 15: Jan 15 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://gist.github.com/muff-in/ff678b1fda17e6188aa0462a99626121#assembly-language" target="_blank">Low-Level Hacking</a> : muff-in <br><br>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">PyExp</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/pentestplus/join" target="_blank">CompTIA Pentest+ Path</a> : TryHackMe <br><br>
+              <a href="https://metactf.com/login" target="_blank">MetaCTF</a>
+              <a href="https://tryhackme.com/room/road" target="_blank">Road</a> : TryHackMe <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://infosecwriteups.com/escaperoom-pcap-analysis-with-wireshark-ea7abcc68a18" target="_blank">EscapeRoom — PCAP Analysis with Wireshark</a> : Hacktivities <br><br>
+              <a href="https://infosecwriteups.com/unauthenticated-access-to-mongodb-database-of-oracle-corporation-d825c271267a" target="_blank">Unauthenticated Access To MongoDB Database of Oracle Corporation</a> : Pratikkhalane <br><br>
+              <a href="https://bhichher.medium.com/how-to-use-grep-with-regex-like-a-pro-a2ea4302364e" target="_blank">How to use grep with regex like a Pro!</a> : Rahul Bhichher <br><br>
+              <a href="https://medium.com/@turkishhoodie010/the-roadmap-to-become-an-ethical-hacker-b0d58129a7dc" target="_blank">The Roadmap to become an Ethical hacker</a> : Ahmet Göker <br><br>
+              <a href="https://blog.pentesterlab.com/a-strategy-to-land-your-first-pentest-job-25209a351689" target="_blank">A strategy to land your first pentest job</a> : PentesterLab <br><br>
+              <a href="https://medium.com/@sherlock297/how-to-check-subdomains-are-active-or-not-91fd75e3e412" target="_blank">How to Check Subdomains are Active or Not</a> : Ravindra <br><br>
             </p>
           <br><br>
         </p>
