--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -444,6 +444,29 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 15: Jan 15 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://gist.github.com/muff-in/ff678b1fda17e6188aa0462a99626121#assembly-language" target="_blank">Low-Level Hacking</a> : muff-in <br><br>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Inclusiveness</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/room/undiscoveredup" target="_blank">Undiscovered</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/bof1" target="_blank">Buffer Overflows</a> : TryHackMe <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://medium.com/@shubhamkumarks1999/php-type-juggling-1c6a35ffe3ee" target="_blank">PHP Type Juggling</a> : Shubham kumar` <br><br>
+              <a href="https://sivasimha.medium.com/unrestricted-file-upload-cloud-fare-bypass-12867b65de3a" target="_blank">Unrestricted File Upload (Cloud fare Bypass )</a> : KidBuU_04A0 <br><br>
+              <a href="https://manasharsh.medium.com/shuffling-the-codes-reasons-you-must-learn-programming-for-finding-great-bugs-535aea7d5856" target="_blank">Shuffling the codes: Reasons you must learn programming for finding great bugs</a> : Manas Harsh <br><br>
+              <a href="https://medium.com/@mohameddhanish98/from-simple-recon-to-reflected-xss-8ba0cf04df49" target="_blank">From Simple Recon to Reflected XSS</a> : Mohamed Dhanish <br><br>
+              <a href="https://medium.com/@subhadeep78910/i-find-reflected-xss-in-javatpoint-94386fc9a9fa" target="_blank">I Find Reflected Xss in Javatpoint</a> : Subhadeep Kundu <br><br>
+              <a href="https://aaryanapex.medium.com/bug-bounty-methodology-horizontal-enumeration-89f7cd172e6e" target="_blank">Bug Bounty Recon — Horizontal Enumeration</a> : Aaryan <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
