--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -467,6 +467,27 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 16: Jan 16 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Lampiao</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/room/introductiontohoneypots" target="_blank">Introduction to Honeypots</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/jokerctf" target="_blank">HA Joker CTF</a> : TryHackMe <br><br>
+              CCDC Research <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://medium.com/@TutorialBoy24/windows-lockscreen-elevation-of-privilege-vulnerability-cve-2020-1398-a88706856444" target="_blank">Windows Lockscreen Elevation of Privilege Vulnerability — CVE-2020–1398</a> : TutorialBoy <br><br>
+              <a href="https://codewithvamp.medium.com/bug-type-html-injection-in-confirmation-email-db4954b52740" target="_blank">Bug Type: HTML injection in confirmation Email !</a> : Vaibhav Kumar Srivastava <br><br>
+              <a href="https://aleksikistauri.medium.com/bypassing-httponly-with-phpinfo-file-4e5a8b17129b" target="_blank">Bypassing HttpOnly with phpinfo file</a> : Aleksi Kistauri <br><br>
+              <a href="https://infosecwriteups.com/bypassed-the-subscription-and-got-the-certification-27c571c2f383" target="_blank">Bypassed the subscription and got the certification</a> : Ramalingasamy <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
