--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -488,6 +488,32 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 17: Jan 17 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.udemy.com/course/the-complete-2018-cyber-security-guide-for-non-professionals/" target="_blank">The Absolute Beginners Guide to Cyber Security 2021 - Part 2</a> : Udemy <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Dawn</a> : Offensive Security Proving Grounds (Play) <br><br>
+              CCDC Research <br><br>
+              <a href="https://tryhackme.com/room/historyofmalware" target="_blank">History of Malware</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/nerdherd" target="_blank">NerdHerd</a> : TryHackMe <br><br>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://medium.com/@vflexo/bruteforce-protections-bypass-bbe9cd1f9bdf" target="_blank">Bruteforce Protections Bypass</a> : vFlexo <br><br>
+              <a href="https://santoshdbobade.medium.com/how-i-got-reflected-cross-site-scripting-rxss-on-manchester-metropolitan-university-700b36cb4f53" target="_blank">How I got Reflected Cross Site Scripting(RXSS) on Manchester Metropolitan University</a> : Santosh Bobade <br><br>
+              <a href="https://santoshdbobade.medium.com/how-i-got-an-appreciation-letter-from-harvard-university-a3d19de69701" target="_blank">How I Got An Appreciation Letter From Harvard University</a> : Santosh Bobade <br><br>
+              <a href="https://kingcoolvikas.medium.com/how-i-was-able-to-see-sensitive-information-on-one-of-the-indias-best-school-website-5800b5ab834c" target="_blank">How i was able to see Sensitive Information on One of the India’s best School Website.</a> : Vikas Anand <br><br>
+              <a href="https://monish-basaniwal.medium.com/trusting-pre-domain-wildcard-as-origin-csrf-attack-devfolio-adc2261635cf" target="_blank">Trusting Pre-domain Wildcard as Origin CSRF Attack — Devfolio</a> : Monish Basaniwal <br><br>
+              <a href="https://medium.com/@0nlymohammed/nginx-merge-slashes-path-traversal-bc3793fc1594" target="_blank">nginx merge slashes path traversal</a> : Mohammed Amer <br><br>
+              <a href="https://systemweakness.com/xss-filter-evasion-idor-3d4624758ff0" target="_blank">XSS Filter Evasion + IDOR</a> : 0xEchidonut <br><br>
+
+            </p>
+          <br><br>
+        </p>
+        <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
