--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -444,7 +444,7 @@
           <br><br>
         </p>
         <br><br>
-        <h3>Day 15: Jan 15 2022</h3><br>
+        <h3>Day 16: Jan 16 2022</h3><br>
         <p>
           <h5>My Activities</h5>
             <p>
@@ -467,7 +467,7 @@
           <br><br>
         </p>
         <br><br>
-        <h3>Day 16: Jan 16 2022</h3><br>
+        <h3>Day 17: Jan 17 2022</h3><br>
         <p>
           <h5>My Activities</h5>
             <p>
@@ -488,7 +488,7 @@
           <br><br>
         </p>
         <br><br>
-        <h3>Day 17: Jan 17 2022</h3><br>
+        <h3>Day 18: Jan 18 2022</h3><br>
         <p>
           <h5>My Activities</h5>
             <p>
@@ -509,7 +509,29 @@
               <a href="https://monish-basaniwal.medium.com/trusting-pre-domain-wildcard-as-origin-csrf-attack-devfolio-adc2261635cf" target="_blank">Trusting Pre-domain Wildcard as Origin CSRF Attack — Devfolio</a> : Monish Basaniwal <br><br>
               <a href="https://medium.com/@0nlymohammed/nginx-merge-slashes-path-traversal-bc3793fc1594" target="_blank">nginx merge slashes path traversal</a> : Mohammed Amer <br><br>
               <a href="https://systemweakness.com/xss-filter-evasion-idor-3d4624758ff0" target="_blank">XSS Filter Evasion + IDOR</a> : 0xEchidonut <br><br>
-
+            </p>
+          <br><br>
+        </p>
+        <br><br>
+        <h3>Day 18: Jan 18 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.udemy.com/course/the-complete-2018-cyber-security-guide-for-non-professionals/" target="_blank">The Absolute Beginners Guide to Cyber Security 2021 - Part 2</a> : Udemy <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Ha-natraj</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/room/thatstheticket" target="_blank">That's The Ticket</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/redteamthreatintel" target="_blank">Red Team Threat Intel</a> : TryHackMe <br><br>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://medium.com/@Sm9l/bug-bounty-recon-content-discovery-efficiency-pays-2ec2462532b1" target="_blank">Bug Bounty Recon: Content Discovery (Efficiency pays $)</a> : Sm9l <br><br>
+              <a href="https://infosecwriteups.com/how-i-scored-2k-bounty-via-an-idor-32eb2fa8aa1e" target="_blank">How I Scored 2K Bounty via an IDOR</a> Sicksec <br><br>
+              <a href="https://hcibo.medium.com/my-pentest-log-1-1bd47e9998bd" target="_blank">My Pentest Log -1 -</a> : Hamit CİBO <br><br>
+              <a href="https://aaryanapex.medium.com/subdomain-enumeration-the-right-way-prerequisites-7449ac0f2498" target="_blank">Subdomain Enumeration — The Right way (Prerequisites)</a> : Aaryan <br><br>
+              <a href="https://sudarshan-s.medium.com/local-file-inclusion-lfi-a-beginners-guide-5629bbcbcffb" target="_blank">LOCAL FILE INCLUSION(LFI): AN OVERVIEW</a> : Sudarshan Sangameswaran <br><br>
+              <a href="https://rashahacks.medium.com/ethical-hacking-roadmap-and-resources-395d4f29d2b6" target="_blank">Ethical Hacking Roadmap and Resources</a> : Inderjeet Singh - rashahacks <br><br>
             </p>
           <br><br>
         </p>
