--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -534,6 +534,28 @@
               <a href="https://rashahacks.medium.com/ethical-hacking-roadmap-and-resources-395d4f29d2b6" target="_blank">Ethical Hacking Roadmap and Resources</a> : Inderjeet Singh - rashahacks <br><br>
             </p>
           <br><br>
+          <h3>Day 18: Jan 18 2022</h3><br>
+          <p>
+            <h5>My Activities</h5>
+              <p>
+                <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">OnSystemShellDredd</a> : Offensive Security Proving Grounds (Play) <br><br>
+                <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Wpwm</a> : Offensive Security Proving Grounds (Play) <br><br>
+                <a href="https://tryhackme.com/room/labyrinth8llv" target="_blank">Minotaur's Labyrinth</a> : TryHackMe <br><br>
+                <a href="https://tryhackme.com/room/shodan" target="_blank">Shodan.io</a> : TryHackMe <br><br>
+                <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+                CCDC Meeting <br><br>
+                <a href="https://knightctf.com/login" target="_blank">KnightCTF</a>
+              </p>
+            <br><br> 
+            <h5>Blogs Reads</h5>
+              <p>
+                <a href="https://infosecwriteups.com/day3-computer-networks-100daysofhacking-1f9734b80313" target="_blank">Day3, Computer Networks — 100DaysofHacking</a> Ayush Verma <br><br>
+                <a href="https://infosecwriteups.com/sony-hunting-i-discovering-hidden-parameters-5x-swag-c3396c0064bc" target="_blank">SONY Hunting I: Discovering Hidden Parameters (5x SWAG)</a> can1337 <br><br>
+                <a href="https://wraith0p.medium.com/all-labs-server-side-request-forgery-walkthrough-b78f248300c4" target="_blank">ALL PortSwigger SSRF Labs: Server-side request forgery | WalkThrough</a> : WraithOP <br><br>
+                <a href="https://infosecwriteups.com/how-i-scored-1k-bounty-using-waybackurls-717d9673ca52" target="_blank">How I Scored 1K Bounty Using Waybackurls</a> : Sicksec <br><br>
+                <a href="https://amallnamd.medium.com/how-i-find-blind-xss-on-a-famous-platform-4d5be5cd3fb3" target="_blank">How I Find Blind XSS On a Famous Platform</a> : Amallnamd <br><br>
+              </p>
+            <br><br>
         </p>
         <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
