--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -513,7 +513,7 @@
           <br><br>
         </p>
         <br><br>
-        <h3>Day 18: Jan 18 2022</h3><br>
+        <h3>Day 19: Jan 19 2022</h3><br>
         <p>
           <h5>My Activities</h5>
             <p>
@@ -534,7 +534,7 @@
               <a href="https://rashahacks.medium.com/ethical-hacking-roadmap-and-resources-395d4f29d2b6" target="_blank">Ethical Hacking Roadmap and Resources</a> : Inderjeet Singh - rashahacks <br><br>
             </p>
           <br><br>
-          <h3>Day 18: Jan 18 2022</h3><br>
+          <h3>Day 20: Jan 20 2022</h3><br>
           <p>
             <h5>My Activities</h5>
               <p>
@@ -558,6 +558,30 @@
             <br><br>
         </p>
         <br><br>
+        <h3>Day 21: Jan 21 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://tryhackme.com/room/haskhell" target="_blank">HaskHell</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/hackernote" target="_blank">hackerNote</a> : TryHackMe <br><br>
+              Security+ <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Bottleneck</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://knightctf.com/login" target="_blank">KnightCTF</a>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://sapt.medium.com/research-on-clickjacking-network-sniffing-cyber-sapiens-internship-task-13-72a29a18ddcd" target="_blank">Research on Clickjacking & Network Sniffing- Cyber Sapiens Internship Task-13</a> : Prajit Sindhkar <br><br>
+              <a href="https://medium.com/@pranaybafna/tcapt-dll-hijacking-888d181ede8e" target="_blank">TCAPT: DLL Hijacking</a> : Pranay Bafna <br><br>
+              <a href="https://infosecwriteups.com/day-4-cn-network-topologies-100daysofhacking-d01377674623" target="_blank">Day 4, CN-Network Topologies #100DaysofHacking</a> Ayush Verma <br><br>
+              <a href="https://srlsec.medium.com/sql-injection-vulnerability-on-keralas-online-recharge-website-be1425841697" target="_blank">Three different types of SQL injection in one POST parameter</a> : Sarathlal Srl 🇮🇳 <br><br>
+              <a href="https://medium.com/@jr.mayank1999/static-website-black-box-testing-to-admin-authentication-bypass-bcc38d2540e9" target="_blank">Static website Black-Box testing to admin authentication bypass!!!</a> : Un9nplayer <br><br>
+              <a href="https://thehemdeep.medium.com/misconfigured-social-login-leads-to-permanent-account-access-41a907d6bef5" target="_blank">Misconfigured Social Login(OAuth) Leads to Permanent account access</a> : Hemdeep Gamit <br><br>
+              <a href="https://0xbadb00da.medium.com/account-takeover-via-stored-xss-with-arbitrary-file-upload-2774ec6cff51" target="_blank">Account takeover via stored XSS with arbitrary file upload</a> : 0xbadb00da <br><br>
+            </p>
+          <br><br>
+      </p>
+      <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
