--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#week3">Week 3</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week4">Week 4</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -582,7 +585,31 @@
           <br><br>
       </p>
       <br><br>
-        <p>Copyright © 2022 Aditya Dindi</p>
+      <h2 id="week4">Week 4</h2> <br><br><br>
+      <br><br>
+      <h3>Day 22: Jan 22 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Born2Root</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://tryhackme.com/room/ffuf">ffuf</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/madeyescastle" target="_blank">Madeye's Castle</a> : TryHackMe <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://sapt.medium.com/research-on-cors-misconfiguration-cyber-sapiens-internship-task-12-b37e5704647b" target="_blank">Research on CORS Misconfiguration- Cyber Sapiens Internship Task-12</a> : Prajit Sindhkar <br><br>
+            <a href="https://medium.com/@vflexo/xyz-of-xss-62603eb4cba" target="_blank">XYZ of XSS</a> : vFlexo <br><br>
+            <a href="https://hcibo.medium.com/my-bug-bounty-adventure-1-b060b5bb1b2e" target="_blank">My Bug Bounty Adventure -1-</a> : Hamit CİBO <br><br>
+            <a href="https://aidilarf.medium.com/cve-2021-44855-blind-stored-xss-in-visualeditor-media-dialog-at-wikipedia-4899e1c197fc" target="_blank">[CVE-2021–44855] Blind Stored XSS in VisualEditor media dialog at Wikipedia</a> : Aidil Arief <br><br>
+            <a href="https://medium.com/@kaorrosi/finding-csrf-vulnerabilities-with-burpsuite-a0a37b87eb85" target="_blank">Finding CSRF Vulnerabilities with BurpSuite</a> : Kaorrosi <br><br>
+            <a href="https://medium.com/@aditya043k/how-i-found-high-priority-pii-leak-through-web-archive-b5499a925090" target="_blank">How I found High-Priority PII leak through web archive</a> : Aditya Singh <br><br>
+            <a href="https://infosecwriteups.com/day5-cn-subnetting-100daysofhacking-893346306e0d" target="_blank">Day5 CN-Subnetting #100DaysofHacking</a> : Ayush Verma <br><br>
+          </p>
+        <br><br>
+    </p>
+    <br><br>
+    <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
   </center>
