--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -609,6 +609,27 @@
         <br><br>
     </p>
     <br><br>
+    <h3>Day 23: Jan 23 2022</h3><br>
+    <p>
+      <h5>My Activities</h5>
+        <p>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Deception</a> : Offensive Security Proving Grounds (Play) <br><br>
+          <a href="https://youtu.be/3Kq1MIfTWCE" target="_blank">Full Ethical Hacking Course - Network Penetration Testing for Beginners (2019)</a> : freeCodeCamp.ord <br><br>
+        </p>
+      <br><br> 
+      <h5>Blogs Reads</h5>
+        <p>
+          <a href="https://systemweakness.com/multi-xss-exploit-in-upload-file-2bfde6ce471a" target="_blank">Multi XSS Exploit in Upload File</a> : M7.Arman <br><br>
+          <a href="https://pullakarthik5.medium.com/malicious-file-upload-leads-to-off-domain-xss-bd968a2da2e5" target="_blank">Malicious file upload leads to off-domain XSS</a> : @pullakarthik <br><br>
+          <a href="https://medium.com/@St00rm/reflected-self-xss-to-stored-xss-9a5f516e2f3f" target="_blank">\\ Reflected+Self XSS to Stored XSS //</a> : Abde Ouabala <br><br>
+          <a href="https://sanduni.medium.com/exploiting-basic-sql-vulnerability-e63d4e624410" target="_blank">Exploiting basic SQL vulnerability.</a> : Sanduni Fernando <br><br>
+          <a href="https://medium.com/@qdoan95/building-an-exploit-for-cve-2018-19410-1475f555f74c" target="_blank">Building an exploit for CVE-2018-19410</a> : Quan Doan <br><br>
+          <a href="https://mohitkumar0786.medium.com/my-first-blind-xss-3ff09d9cc0c5" target="_blank">My First Blind XSS</a> : Mohit Ahir <br><br>
+          <a href="https://aravind-a2d.medium.com/the-new-king-broken-access-control-5d4fe465c7ea" target="_blank">The New King “Broken Access Control”</a> : Aravind_a2d <br><br>
+        </p>
+      <br><br>
+  </p>
+  <br><br>
     <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
