--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -628,9 +628,31 @@
           <a href="https://aravind-a2d.medium.com/the-new-king-broken-access-control-5d4fe465c7ea" target="_blank">The New King “Broken Access Control”</a> : Aravind_a2d <br><br>
         </p>
       <br><br>
-  </p>
-  <br><br>
-    <p>Copyright © 2022 Aditya Dindi</p>
+      </p>
+      <br><br>
+      <h3>Day 24: Jan 24 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/passwordattacks" target="_blank">Password Attacks</a> : TryHackMe <br><br>
+            <a href="https://knightctf.com/login" target="_blank">KnightCTF</a>
+            <a href="https://tryhackme.com/room/ghizerctf" target="_blank">Ghizer</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">FunBox</a> : Offensive Security Proving Grounds (Play) <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@kaorrosi/discovering-file-inclusion-vulnerabilities-91aa9aede6d8" target="_blank">Discovering File Inclusion Vulnerabilities</a> : Kaorrosi <br><br>
+            <a href="https://srlsec.medium.com/found-sql-injection-vulnerability-in-redacted-kerala-gov-in-c946f740723d" target="_blank">Time-Based SQL Injection to Dumping the Database</a> : Sarathlal Srl 🇮🇳 <br><br>
+            <a href="https://infosecwriteups.com/bypassed-the-subscription-and-got-the-certification-27c571c2f383" target="_blank">Bypassed the subscription and got the certification</a> : Ramalingasamy <br><br>
+            <a href="https://akash-venky091.medium.com/interesting-test-cases-of-file-uploading-vulnerabilities-3ad47f9e6149" target="_blank">Interesting Test Cases of File uploading vulnerabilities</a> : Akash Venky <br><br>
+            <a href="https://rajkumar1189.medium.com/how-i-found-reflected-xss-on-public-program-385eac32b515" target="_blank">How i found reflected xss on public program</a> : Raj Kumar S <br><br>
+
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+<p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
   </center>
