--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -635,7 +635,7 @@
         <h5>My Activities</h5>
           <p>
             <a href="https://tryhackme.com/room/passwordattacks" target="_blank">Password Attacks</a> : TryHackMe <br><br>
-            <a href="https://knightctf.com/login" target="_blank">KnightCTF</a>
+            <a href="https://knightctf.com/login" target="_blank">KnightCTF</a> <br><br>
             <a href="https://tryhackme.com/room/ghizerctf" target="_blank">Ghizer</a> : TryHackMe <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">FunBox</a> : Offensive Security Proving Grounds (Play) <br><br>
           </p>
@@ -647,12 +647,33 @@
             <a href="https://infosecwriteups.com/bypassed-the-subscription-and-got-the-certification-27c571c2f383" target="_blank">Bypassed the subscription and got the certification</a> : Ramalingasamy <br><br>
             <a href="https://akash-venky091.medium.com/interesting-test-cases-of-file-uploading-vulnerabilities-3ad47f9e6149" target="_blank">Interesting Test Cases of File uploading vulnerabilities</a> : Akash Venky <br><br>
             <a href="https://rajkumar1189.medium.com/how-i-found-reflected-xss-on-public-program-385eac32b515" target="_blank">How i found reflected xss on public program</a> : Raj Kumar S <br><br>
-
           </p>
         <br><br>
       </p>
       <br><br>
-<p>Copyright © 2022 Aditya Dindi</p>
+      <h3>Day 25: Jan 25 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/commonattacks" target="_blank">Common Attacks</a> : TryHackMe <br><br>
+            <a href="https://knightctf.com/login" target="_blank">KnightCTF</a> <br><br>
+            <a href="https://tryhackme.com/room/willow" target="_blank">Willow</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Loly</a> : Offensive Security Proving Grounds (Play) <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://robinx0.medium.com/national-cyber-drill-2021-reverse-engineering-challenges-writeup-75b703c3c7e8" target="_blank">National Cyber Drill 2021 : Reverse Engineering challenges writeup</a> : 0xRobin <br><br>
+            <a href="https://securitygoat.medium.com/powering-the-lamest-self-xss-9e5febdf7b38" target="_blank">Powering the Lamest: Self-XSS FTW!</a> : SecurityGOAT <br><br>
+            <a href="https://infosecwriteups.com/day6-cn-arp-and-dhcp-protocol-100daysofhacking-2eae786dc97b" target="_blank">Day6 CN-ARP and DHCP Protocol #100DaysofHacking</a> Ayush Verma <br><br>
+            <a href="https://infosecwriteups.com/day-7-cn-osi-model-100daysofhacking-925c9e769a7d" target="_blank">Day 7 CN-OSI Model #100DaysofHacking</a> Ayush Verma <br><br>
+            <a href="https://infosecwriteups.com/day-8-cn-tcp-udp-100daysofhacking-2584322871b1" target="_blank">Day 8 CN- TCP/UDP #100DaysofHacking</a> Ayush Verma <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
   </center>
