--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -406,7 +406,7 @@
               <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Vegeta1</a> : Offensive Security Proving Grounds (Play) <br><br>
               <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">CyberSploit1</a> : Offensive Security Proving Grounds (Play) <br><br>
               <a href="https://tryhackme.com/path-action/pentestplus/join" target="_blank">CompTIA Pentest+ Path</a> : TryHackMe <br><br>
-              <a href="https://metactf.com/login" target="_blank">MetaCTF</a>
+              <a href="https://metactf.com/login" target="_blank">MetaCTF</a> <br><br>
               <a href="https://tryhackme.com/room/pythonforcybersecurity" target="_blank">Python for Pentesters</a> : TryHackMe <br></br>
               <a href="https://tryhackme.com/room/inferno" target="_blank">Inferno</a> : TryHackMe <br><br>
             </p>
@@ -669,6 +669,29 @@
             <a href="https://infosecwriteups.com/day6-cn-arp-and-dhcp-protocol-100daysofhacking-2eae786dc97b" target="_blank">Day6 CN-ARP and DHCP Protocol #100DaysofHacking</a> Ayush Verma <br><br>
             <a href="https://infosecwriteups.com/day-7-cn-osi-model-100daysofhacking-925c9e769a7d" target="_blank">Day 7 CN-OSI Model #100DaysofHacking</a> Ayush Verma <br><br>
             <a href="https://infosecwriteups.com/day-8-cn-tcp-udp-100daysofhacking-2584322871b1" target="_blank">Day 8 CN- TCP/UDP #100DaysofHacking</a> Ayush Verma <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 26: Jan 26 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/enpass" target="_blank">En-pass</a> : TryHackMe <br><br>
+            <a href="https://metactf.com/login" target="_blank">MetaCTF</a> <br><br>
+            <a href="https://tryhackme.com/room/dejavu" target="_blank">Deja Vu</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">SoSimple</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://app.hackthebox.com/machines/Horizontall" target="_blank">Horizontall</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@Sm9l/what-i-learnt-from-reading-220-idor-bug-reports-6efbea44db7" target="_blank">What I learnt from reading 220* IDOR bug reports.</a> : Sm9l <br><br>
+            <a href="https://pullakarthik5.medium.com/fuzzing-is-always-fun-1697af1a69fe" target="_blank">Fuzzing is always fun..!!</a> : @pullakarthik <br><br>
+            <a href="https://wraith0p.medium.com/burpsuite-lab-web-shell-upload-via-path-traversal-walkthrough-5a43ab9667b" target="_blank">PortSwigger Lab: Web shell upload via path traversal | WalkThrough</a> : WraithOP <br><br>
+            <a href="https://hcibo.medium.com/my-pentest-log-4-82286fe42994" target="_blank">My Pentest Log -4-</a> : Hamit CİBO <br><br>
+            <a href="https://securitygoat.medium.com/data-exfiltration-with-some-fun-xss-tricks-49e9251f05fd" target="_blank">Data Exfiltration with some FUN XSS Tricks</a> : SecurityGOAT <br><br>
+            <a href="https://medium.com/@janerowashington/how-to-hack-a-web-app-mini-series-part-1-footprinting-a-web-infrastructure-c67e062974e1" target="_blank">How to hack a Web App {mini-series} Part 1: Footprinting a web infrastructure</a> : Janero Washington <br><br>
           </p>
         <br><br>
       </p>
