--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -682,6 +682,7 @@
             <a href="https://tryhackme.com/room/dejavu" target="_blank">Deja Vu</a> : TryHackMe <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">SoSimple</a> : Offensive Security Proving Grounds (Play) <br><br>
             <a href="https://app.hackthebox.com/machines/Horizontall" target="_blank">Horizontall</a> : HackTheBox <br><br>
+            Security+ <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
